# project-architect

./: .gitignore  .markdownlint.jsonc  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
commands/: project-architect.md
examples/go-api/: CLAUDE.md
examples/go-api/.claude/: settings.json
examples/go-api/.claude/commands/: commit.md  endpoint.md  explain.md  migrate.md  review.md
examples/go-api/.claude/skills/api-patterns/: SKILL.md
examples/python-fastapi/: CLAUDE.md
examples/python-fastapi/.claude/: settings.json
examples/python-fastapi/.claude/agents/: test-writer.md
examples/python-fastapi/.claude/commands/: commit.md  endpoint.md  explain.md  migrate.md  review.md  test.md
examples/react-nextjs/: .mcp.json  CLAUDE.md  INSTRUCTION.md
examples/react-nextjs/.claude/: settings.json
examples/react-nextjs/.claude/agents/: test-writer.md
examples/react-nextjs/.claude/commands/: commit.md  component.md  explain.md  migrate.md  page.md  review.md  test.md
references/: detection-guide.md  generation-guide.md
skills/project-scanner/: SKILL.md
tests/: README.md  validate-structure.sh
tests/fixtures/empty-project/: README.md
tests/fixtures/go-api-server/: Makefile  go.mod
tests/fixtures/nx-monorepo/: nx.json  package.json  tsconfig.json
tests/fixtures/python-fastapi/: pyproject.toml
tests/fixtures/react-next-app/: jest.config.ts  package.json
(+13 files in other folders)
